# domopin

./: README.md  run_domopin.sh  run_domopin_inicio.sh  run_terminal.sh  run_terminator.sh  start_central_domopin_tmux.sh  start_chrome.sh  start_domopin.desktop  start_domopin_tmux.sh  stop_domopin.desktop
domopin_central/: CMakeLists.txt  package.xml  run_domopin.sh  run_terminal.sh
domopin_central/conf/: out_schedule.json  room_config.json  room_config.json~  schedule.json
domopin_central/launch/: domopin.launch  domopin.launch~  multimaster.launch
domopin_central/scripts/: caldera.py  caldera_real.py  caldera_sim.py  domopin_central_main.py  domopin_main.py  json_utils.py  time_alert.py
domopin_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
domopin_msgs/msg/: ArrayAction.msg  BlindStatus.msg  BoilerStatus.msg  Command.msg  CurrentSchedule.msg  DoorStatus.msg~  RadiatorStatus.msg  RadiatorStatus.msg~  RelayStatus.msg  RoomStatus.msg  RoomStatus.msg~  WindowStatus.msg  WindowStatus.msg~
domopin_msgs/srv/: ServAction.srv  ServCommand.srv  ServEmpty.srv
domopin_riego/: CMakeLists.txt  package.xml
domopin_riego/conf/: room_config.json  room_config.json~  schedule.json  schedule_futuro.json
domopin_riego/launch/: domopin_riego.launch
domopin_riego/scripts/: domopin_riego_main.py  riego_sim.py  time_alert.py
domopin_room/: CMakeLists.txt  package.xml
domopin_room/conf/: blind_schedule.json  out_schedule.json  out_schedule.json~  room_config.json  room_config__default.json  room_config__default.json~  schedule (copia).json  schedule.json  schedule.json~
domopin_room/scripts/: caldera.py  (+16 more)
interface_touchscreen/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
(+25 files in other folders)
